kruskal wallis test performed, initial step getting dependent variable STD and mean

--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import random\n",
-    "from scipy.stats import kruskal\n",
+    "from scipy import stats\n",
     "from typing import Union\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -3924,10 +3924,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3.4375,\n",
+       " 4.0625,\n",
+       " 3.520833333333333,\n",
+       " 3.5416666666666665,\n",
+       " 2.291666666666667,\n",
+       " 2.5208333333333335,\n",
+       " 3.25,\n",
+       " 2.6875,\n",
+       " 4.354166666666667,\n",
+       " 2.0,\n",
+       " 2.3541666666666665,\n",
+       " 3.0,\n",
+       " 1.75,\n",
+       " 2.9791666666666665,\n",
+       " 2.9791666666666665,\n",
+       " 3.625,\n",
+       " 3.25,\n",
+       " 3.4791666666666665,\n",
+       " 3.4791666666666665,\n",
+       " 2.78125,\n",
+       " 3.15625]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KruskalResult(statistic=5.340288198338382, pvalue=0.14850941018198288)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.kruskal(list(V1[\"Usefulness\"]), list(V2[\"Usefulness\"]), list(V3[\"Usefulness\"]), list(V4[\"Usefulness\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KruskalResult(statistic=4.160827469730186, pvalue=0.24461317824093654)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.kruskal(list(V1[\"Ease of use\"]), list(V2[\"Ease of use\"]), list(V3[\"Ease of use\"]), list(V4[\"Ease of use\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KruskalResult(statistic=0.48715346288357797, pvalue=0.9217045384780984)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.kruskal(list(V1[\"Anthropomorphism\"]), list(V2[\"Anthropomorphism\"]), list(V3[\"Anthropomorphism\"]), list(V4[\"Anthropomorphism\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "caps: yes\n",
+      "       Usefulness  Ease of use  Anthropomorphism\n",
+      "count   42.000000    42.000000         42.000000\n",
+      "mean     3.199157     3.056548          2.110119\n",
+      "std      0.636984     0.681418          0.955648\n",
+      "min      1.729167     1.500000          1.000000\n",
+      "25%      2.828125     2.750000          1.375000\n",
+      "50%      3.239583     3.187500          1.937500\n",
+      "75%      3.520833     3.500000          2.968750\n",
+      "max      4.812500     4.750000          4.625000\n",
+      "caps: no\n",
+      "       Usefulness  Ease of use  Anthropomorphism\n",
+      "count   42.000000    42.000000         42.000000\n",
+      "mean     2.997520     2.934524          2.142857\n",
+      "std      0.707940     0.693083          0.726025\n",
+      "min      1.416667     1.000000          1.000000\n",
+      "25%      2.567708     2.500000          1.750000\n",
+      "50%      3.062500     3.000000          2.125000\n",
+      "75%      3.403646     3.250000          2.593750\n",
+      "max      4.812500     4.750000          4.250000\n",
+      "delay: yes\n",
+      "       Usefulness  Ease of use  Anthropomorphism\n",
+      "count   42.000000    42.000000         42.000000\n",
+      "mean     2.952629     2.848214          2.101190\n",
+      "std      0.671903     0.693796          0.784393\n",
+      "min      1.416667     1.000000          1.000000\n",
+      "25%      2.531250     2.406250          1.656250\n",
+      "50%      3.052083     3.000000          2.000000\n",
+      "75%      3.437500     3.250000          2.468750\n",
+      "max      4.354167     4.250000          4.625000\n",
+      "delay: no\n",
+      "       Usefulness  Ease of use  Anthropomorphism\n",
+      "count   42.000000    42.000000         42.000000\n",
+      "mean     3.244048     3.142857          2.151786\n",
+      "std      0.657876     0.653072          0.907932\n",
+      "min      1.729167     1.750000          1.000000\n",
+      "25%      2.875000     2.750000          1.250000\n",
+      "50%      3.187500     3.125000          2.125000\n",
+      "75%      3.744792     3.687500          2.968750\n",
+      "max      4.812500     4.750000          4.250000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# version 1: caps: yes, delay: yes (3)\n",
+    "# version 2: caps: yes, delay: no (0)\n",
+    "# version 3: caps: no, delay: yes (3)\n",
+    "# version 4: caps: no, delay no (0)\n",
+    "\n",
+    "# therefore, capsY = V1 + v2\n",
+    "# therefore, capsN = V3 + V4\n",
+    "# therefore, delayY = V1 + V3\n",
+    "# therefore, delayN = V2 + V4\n",
+    "\n",
+    "capsY = pd.concat([V1, V2])[[\"Usefulness\", \"Ease of use\", \"Anthropomorphism\"]].describe()\n",
+    "print(\"caps: yes\")\n",
+    "print(capsY)\n",
+    "capsN = pd.concat([V3, V4])[[\"Usefulness\", \"Ease of use\", \"Anthropomorphism\"]].describe()\n",
+    "print(\"caps: no\")\n",
+    "print(capsN)\n",
+    "delayY = pd.concat([V1, V3])[[\"Usefulness\", \"Ease of use\", \"Anthropomorphism\"]].describe()\n",
+    "print(\"delay: yes\")\n",
+    "print(delayY)\n",
+    "delayN = pd.concat([V2, V4])[[\"Usefulness\", \"Ease of use\", \"Anthropomorphism\"]].describe()\n",
+    "print(\"delay: no\")\n",
+    "print(delayN)"
+   ]
   },
   {
    "cell_type": "code",
