added std and mean analysis of all versions, and individual scenarios

--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -4099,6 +4099,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "capsYdelayY\n",
+      "       Usefulness  Ease of use  Anthropomorphism\n",
+      "count   21.000000    21.000000         21.000000\n",
+      "mean     3.071429     2.952381          2.083333\n",
+      "std      0.650698     0.708736          0.894718\n",
+      "min      1.750000     1.500000          1.000000\n",
+      "25%      2.687500     2.250000          1.500000\n",
+      "50%      3.156250     3.000000          1.750000\n",
+      "75%      3.479167     3.500000          2.375000\n",
+      "max      4.354167     4.250000          4.625000\n",
+      "capsYdelayN\n",
+      "       Usefulness  Ease of use  Anthropomorphism\n",
+      "count   21.000000    21.000000         21.000000\n",
+      "mean     3.326885     3.160714          2.136905\n",
+      "std      0.611650     0.653288          1.034487\n",
+      "min      1.729167     1.750000          1.000000\n",
+      "25%      3.104167     3.000000          1.000000\n",
+      "50%      3.291667     3.250000          2.125000\n",
+      "75%      3.541667     3.500000          3.000000\n",
+      "max      4.812500     4.750000          4.000000\n",
+      "capsNdelayY\n",
+      "       Usefulness  Ease of use  Anthropomorphism\n",
+      "count   21.000000    21.000000         21.000000\n",
+      "mean     2.833829     2.744048          2.119048\n",
+      "std      0.687338     0.679472          0.678321\n",
+      "min      1.416667     1.000000          1.000000\n",
+      "25%      2.500000     2.500000          1.750000\n",
+      "50%      3.041667     2.875000          2.000000\n",
+      "75%      3.270833     3.125000          2.625000\n",
+      "max      4.062500     3.750000          3.375000\n",
+      "capsNdelayN\n",
+      "       Usefulness  Ease of use  Anthropomorphism\n",
+      "count   21.000000    21.000000         21.000000\n",
+      "mean     3.161210     3.125000          2.166667\n",
+      "std      0.706198     0.668487          0.786938\n",
+      "min      1.750000     2.000000          1.000000\n",
+      "25%      2.812500     2.750000          1.750000\n",
+      "50%      3.104167     3.000000          2.250000\n",
+      "75%      3.812500     3.750000          2.500000\n",
+      "max      4.812500     4.750000          4.250000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# capsYdelayY = V1\n",
+    "# capsYdelayN = V2\n",
+    "# capsNdelayY = V3\n",
+    "# capsNdelayN = V4\n",
+    "print(\"capsYdelayY\")\n",
+    "print(V1[[\"Usefulness\", \"Ease of use\", \"Anthropomorphism\"]].describe())\n",
+    "print(\"capsYdelayN\")\n",
+    "print(V2[[\"Usefulness\", \"Ease of use\", \"Anthropomorphism\"]].describe())\n",
+    "print(\"capsNdelayY\")\n",
+    "print(V3[[\"Usefulness\", \"Ease of use\", \"Anthropomorphism\"]].describe())\n",
+    "print(\"capsNdelayN\")\n",
+    "print(V4[[\"Usefulness\", \"Ease of use\", \"Anthropomorphism\"]].describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
